feat(config): change update config route to PATCH and POST
