# docs/swagger.yaml
@@ -187,6 +187,33 @@ paths:
       summary: Get App Config
       tags:
       - App/Config
+    patch:
+      description: Update Gorgon Application Config
+      parameters:
+      - description: Request Body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/schemas.ConfigFile'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schemas.DefaultResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/schemas.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/schemas.ErrorResponse'
+      summary: Update App Config
+      tags:
+      - App/Config
     post:
       description: Update Gorgon Application Config
       parameters:
